@@ -9,6 +9,11 @@ Continued refactoring.
 
 - coverage.annotate_file is no longer available.
 
+- Annotation into a directory (-a -d) behaves differently.  The annotated files
+  are named with their hierarchy flattened so that same-named files from
+  different directories no longer collide.  Also, only files in the current
+  tree are included.
+
 - Programs executed with -x now behave more as they should, for example,
   __file__ has the correct value.
 
